# imou-chess-gui

./: Cargo.toml
config/: server.json
src/: chessview.rs  chessview_controller.rs  main.rs
src/inet/: chess.proto  protobuf.rs
