[package]
name = "chess-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess = {git = "https://github.com/INDA22PlusPlus/dmitryc-chess.git"}

piston = "0.53.1"
piston2d-graphics = "0.42.0"
piston2d-opengl_graphics = "0.81.0"
pistoncore-glutin_window = "0.70.1"
json = "0.12.4"

bytes = "1.2.1"
prost = "0.11.0"
